Fixed funky spacing on youtube page

--- a/src/home/static/home/css/site.css
+++ b/src/home/static/home/css/site.css
@@ -92,8 +92,14 @@ footer.page-footer {
 	color: #fff;
 }
 
+.container-fluid {
+	padding-left: 5em;
+	padding-right: 5em;
+}
+
 .card {
-	background: transparent;
+	background-color:rgba(0, 0, 0, 0.4);
+	margin: 1em;
 }
 
 .btn {
@@ -247,15 +253,4 @@ footer.page-footer {
     padding-left: 1.4rem;
     transition: all .4s ease 0s;
 }
-#sidebar-wrapper {
-    left: 1.4rem;
-}
-#wrapper.active {
-    padding-left: 150px;
-}
-#wrapper.active #sidebar-wrapper {
-    left: 150px;
-    width: 150px;
-    transition: all .4s ease 0s;
-}
-}
+
